--- a/assets/style.css
+++ b/assets/style.css
@@ -46,7 +46,7 @@ body {
 
 .search-bar .contact-info i {
 
-    color: #f5a623;
+    color: black;
 
     margin-right: 5px;
 
@@ -80,7 +80,7 @@ body {
 
 .contact-info i {
 
-    color: #f5a623;
+    color: black;
 
     margin-right: 5px;
 
@@ -103,6 +103,7 @@ body {
 .nav ul {
     display: flex;
     flex-wrap: wrap;
+    margin-left: 5em;
     justify-content: center;
     list-style-type: none;
     background-color: #fff;
@@ -132,13 +133,13 @@ body {
     height: 2px;
     bottom: 0;
     left: 50%;
-    background-color: #f5a623;
+    background-color: gray;
     transition: all 0.3s ease;
     transform: translateX(-50%);
 }
 
 .nav ul li a:hover {
-    color: #f5a623;
+    color: gray
 }
 
 .nav ul li a:hover::after {
@@ -251,7 +252,7 @@ body {
 
 .carousel-item h1 {
 
-    color: #ff9d00;
+    color: white;
 
     font-size: 2.5em;
 
@@ -300,6 +301,7 @@ body {
     .nav ul {
 
         display: none;
+        margin: 0;;
 
     }
 
@@ -542,7 +544,7 @@ body {
 
 .benefit-section .text-content .benefit i {
     font-size: 24px;
-    color: #F4B400;
+    color: black;
     margin-right: 10px; }
 
 .benefit-section .text-content .benefit h2 {
@@ -634,7 +636,6 @@ body {
 }
 
 .reviews-section .review-header i {
-    color: #f5a623;
     margin-right: 10px;
 }
 
@@ -662,7 +663,13 @@ body {
 
 .reviews-section .review-footer a {
     text-decoration: none;
-    color: #f5a623;
+    color: gray;
+    transition: ease-in-out 0.3s;
+}
+
+.reviews-section .review-footer a:hover {
+    text-decoration: none;
+    color: black;
 }
 
 .reviews-section .pagination {
@@ -808,7 +815,7 @@ body {
 
     height: 3px;
 
-    background-color: #ff6f00;
+    background-color: black;
 
     margin: 10px auto 0;
 
@@ -847,7 +854,7 @@ body {
 
     color: #333;
 
-    border-bottom: 2px solid #ff6f00;
+    border-bottom: 2px solid black;
 
     padding-bottom: 10px;
 
@@ -871,7 +878,7 @@ body {
 
 .location-info i {
 
-    color: #f4b400;
+    color: black;
 
     margin-right: 15px;
 
@@ -1015,7 +1022,7 @@ body {
 
     height: 3px;
 
-    background-color: #ff6f00;
+    background-color: black;
 
     margin: 10px auto 0;
 
@@ -1176,7 +1183,7 @@ footer {
 .footer-contact i,
 .footer-contact i {
     margin-right: 10px;
-    color: #f5a623;
+    color: black;
 }
 
 .footer-social {
@@ -1190,7 +1197,7 @@ footer {
 }
 
 .footer-social a {
-    color: #f5a623;
+    color: black;
     font-size: 24px;
 }
 
@@ -1216,7 +1223,7 @@ footer {
 
     left: 0;
 
-    background-color: #f5a623;
+    background-color: gray;
 
     transition: width 0.3s ease;
 
@@ -1225,7 +1232,7 @@ footer {
 
 .footer-nav a:hover {
 
-    color: #f5a623;
+    color: gray;
 
 }
 
